codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__disconnected_usage_command_reports_unavailable_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Usage details are unavailable for this connection.
