codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved Redapto to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask Redapto to do anything

  gpt-5.6-sol default · /tmp/project
